# python-notebooks

./: README.md  pyproject.toml
1-sequential/: 1-data-types.ipynb  2-variables.ipynb  3-arithmetic-operators.ipynb  4-arithmetic-operators-with-variables.ipynb  5-comparison-operators.ipynb  6-logical-operators.ipynb  7-basic-functions.ipynb
1-sequential/8-exercises/: 0-Intro.ipynb  1-km-to-miles.ipynb  2-pythagorian.ipynb  3-kinetic-energy.ipynb  4-celcius-farenheit.ipynb  5-sphere.ipynb  6-sales.ipynb  7-vat.ipynb  8-average.ipynb  9-percentage.ipynb
2-if/: 1-if.ipynb  2-if-else.ipynb  3-if-elif-else.ipynb
2-if/4-excersices/: 1-max-min.ipynb  2-odd-even.ipynb  3-grades.ipynb  4-tolls.ipynb  5-rooms.ipynb
3-loops/1-range/: range.ipynb
3-loops/2-for/: Ex-01-sums.ipynb  Ex-02-products.ipynb  Ex-03-min-max.ipynb  Ex-04-average.ipynb  Ex-05-nested_for.ipynb
3-loops/3-while/: 01-while.ipynb  02-sums.ipynb  03-products.ipynb  04-min-max.ipynb
3-loops/4-convertions/: 01-convert-for-to-while.ipynb  02-convert-while-to-for.ipynb
3-loops/5-validation_test/: 01-validation_test.ipynb
3-loops/6-exercises/: Example-01.ipynb  Exercise-01.ipynb  Exercise-02.ipynb  Exercise-03.ipynb  Exercise-04.ipynb  Exercise-05.ipynb  Exercise-06.ipynb  (+4 more)
6-lists/: 1-creating-list.ipynb  2-read-write.ipynb  3-operations.ipynb  4-functions-methods.ipynb  5-list-iteration.ipynb  6-sum.ipynb  7-min-max.ipynb
bubble_sort/: 1_theory.ipynb
functions/: 1_embedded.ipynb  2_userDefined_a.ipynb  3_userDefined_b.ipynb
object oriented/: 1_objects.ipynb
object_oriented/: 1_objects.ipynb
(+27 files in other folders)
