[tool.poetry]
name = "python-notebooks"
version = "0.1.0"
description = ""
authors = ["Aris Fergadis <afrgds-epal@yahoo.com>"]
readme = "README.md"
packages = [{include = "python_notebooks", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
